# dawn

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  Dawn0429修复后版.7z  README.md  RELEASE-v1.0.0.md  RELEASE_NOTE_v1.0.0.md  eslint.config.js  package-lock.json  package.json  test-llm.ts  tsconfig.json  turbo.json  vitest.config.ts
.dawn-memory/: memory.json  persistent.json  skills.json
.dawn-memory/.dawn-memory/: memory.index.json  memory.json
.dawn-memory/evolution-archive/: index.json
.dawn-memory/self-evolution/: task-base-2026-04-27.md  task-base-2026-04-28.md  task-base-2026-04-29.md  task-similar-2026-04-27.md  (+261 more)
Dawn/: .gitignore  package.json  tsconfig.json  vitest.config.ts
DawnPanel/: .gitignore  index.html  index.html.backup_20260426_144822  package.json  start-daemon.bat  tmp_debug_env.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
DawnPanel/src-tauri/: Cargo.toml  tauri.conf.json
DawnPanel/src-tauri/capabilities/: default.json
DawnPanel/src-tauri/src/: lib.rs  main.rs
docs/: final-architecture-report.md  重建计划.md  阶段约束.md
src/: new-main.ts
tests/: CodeGenerationCapability.test.ts  Coordinator.test.ts  backend-api.test.ts  capabilities-registry.test.ts  compact-service.test.ts  coordinator-capabilities.test.ts  engine.test.ts  evolution-engine-v2.test.ts  evolution-sandbox-boundary.test.ts  evolution.test.ts  execution-loop.test.ts  hybrid-retriever.test.ts  ipc-bridge.test.ts  memory-compressor.test.ts  memory-layers.test.ts  memory-system-archive.test.ts  memory-system.test.ts  plugin-hotplug.test.ts
(+543 files in other folders)
