[package]
name = "dawn-panel"
version = "1.0.0"
description = "Dawn Panel"
authors = ["Dawn Panel"]
edition = "2021"

[lib]
name = "dawn_panel_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["time", "macros", "rt-multi-thread"] }
cron = "0.15"
chrono = { version = "0.4", features = ["serde"] }
tauri-plugin-dialog = "2"
tauri-plugin-clipboard-manager = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
